src/test/ui/array-slice-vec/match_arr_unknown_len.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/match_arr_unknown_len.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/match_arr_unknown_len.rs:6:9
   |
LL |         [1, 2] => true,
   |         ^^^^^^ expected `2usize`, found `N`
   |
   = note: expected array `[u32; 2]`
              found array `[u32; _]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
